trying to fix top img

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             <span><a href="#">Locations</a></span>
         </nav>
     </header>
-    
+    <!--end of Header-->
+    <!--Main content-->
+    <div class="content">
+        <main>
+
+            <section class="top-section">
+
+
+
+            </section>
+        </main>
 </body>
 </html>
