--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <span><a href="#">Mission</a></span>
             <span><a href="#">Featured Tea</a></span>
             <span><a href="#">Locations</a></span>
+            <span>testing changes</span>
         </nav>
     </header>
     <!--end of Header-->
