--- a/index.html
+++ b/index.html
@@ -14,22 +14,31 @@
             <span><a href="#">Mission</a></span>
             <span><a href="#">Featured Tea</a></span>
             <span><a href="#">Locations</a></span>
-            <span>testing changes</span>
         </nav>
     </header>
     <!--end of Header-->
     <!--Main content-->
     <div class="content">
         <main>
-
+            <!--top section for Our-->
             <section class="top-section">
-                <p>
-                    
-                </p>
-
-
-
+                <div class="mission"></div>
+                    <div class="mission-content">
+                        <h2>Our Mission</h2>
+                            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, oranic tea</h4>
+                    </div>   
             </section>
+        <!--End of top section-->
+        <!--Second section Tea of the Month-->
         </main>
+        <section class="second-section">
+            <div class="Tea-of-the-month">
+                <div class="tea-content">
+                    <h2>Tea of the Month</h2>
+                    <h4>Whats Steeping at The Tea Cozy?</h4>
+                </div>
+            </div>
+        </section>
+        <!--end of second section-->
 </body>
 </html>
