--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     </header>
     <!--end of Header-->
     <!--Main content-->
+<main>
     <div class="content">
-        <main>
-            <!--top section for Our-->
+        <div class="top-section-content">
+            <!--top section for Our Mission-->
             <section class="top-section">
                 <div class="mission"></div>
                     <div class="mission-content">
@@ -28,9 +29,10 @@
                             <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, oranic tea</h4>
                     </div>   
             </section>
+        </div>
         <!--End of top section-->
         <!--Second section Tea of the Month-->
-        </main>
+        </div>
         <section class="second-section">
             <div class="Tea-of-the-month">
                 <div class="tea-content">
@@ -40,5 +42,21 @@
             </div>
         </section>
         <!--end of second section-->
+        <!--Third section first set of tiny imgs-->
+        <section class="third-section">
+            <div class="third-content">
+                <img src="resources/pics/img-berryblitz.jpg" alt="berry blitz tea">
+                    <h4>Fall Berry Blitz Tea</h4>
+            </div>
+            <div class="third-content">
+                <img src="resources/pics/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+                    <h4>Spiced Rum Tea</h4>
+            </div>
+            <div class="third-content">
+                <img src="resources/pics/img-donut.jpg" alt="Seasonal Donut">
+                    <h4>Seasonal Donuts</h4>
+            </div>
+        </section>
+</main>
 </body>
 </html>
