--- a/index.html
+++ b/index.html
@@ -57,6 +57,28 @@
                     <h4>Seasonal Donuts</h4>
             </div>
         </section>
+        <!--End of Third Section-->
+        <!--Start of Section 4-->
+        <section class="fourth-section">
+            <div class="fourth-content">
+                <img src="resources/pics/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+                    <h4>Myrtle Ave Tea</h4>
+            </div>
+            <div class="fourth-content">
+                <img src="resources/pics/img-bedford-bizarre.jpg" alt="Bedford Bizzar Tea">
+                    <h4>Bedford Bizarre Tea</h4>
+            </div>          
+        </section>
+        <!--end of section 4-->
+        <!--Start of Section 5 (locations)-->
+        <section class="locations-section">
+            <div class="locations-content">
+                <div class="locations-title">
+                    <h3>Locations</h3>
+                </div>
+            </div>
+        </section>
+        <!--End of section 5-->
 </main>
 </body>
 </html>
