--- a/index.html
+++ b/index.html
@@ -76,6 +76,27 @@
                 <div class="locations-title">
                     <h3>Locations</h3>
                 </div>
+                <div class="column-section">
+                    <div class="column">
+                        <h3>Downtown</h3>
+                            <h4>384 West 4th st</h4>
+                            <h4>Suite 108</h4>
+                            <h4>Portland, Maine</h4>
+                    </div>
+                    <div class="column">
+                        <h3>East Bayside</h3>
+                            <h4>3433 Phisherman's Avenue</h4>
+                            <h4>(Northwest Corner)</h4>
+                            <h4>Portland,Maine</h4>
+                    </div>
+                    <div class="column">
+                        <h3>Oakdale</h3>
+                            <h4>515 Crescent Avenue</h4>
+                            <h4>Second Floor</h4>
+                            <h4>Portland, Maine</h4>
+                    </div>
+
+                </div>
             </div>
         </section>
         <!--End of section 5-->
