--- a/index.html
+++ b/index.html
@@ -99,7 +99,19 @@
                 </div>
             </div>
         </section>
-        <!--End of section 5-->
+        <!--End of location section-->
+        <!--Start of the Footer-->
+        <footer>
+            <div class="footer-content">
+                <h2>The Tea Cozy</h2>
+                <h5>contact@theteacozy.com</h5>
+                <h5>917-555-8904</h5>
+            </div>
+        </footer>
+        <div class="copyright">
+            <p>copyright The Tea Cozy 2017</p>
+        </div>
+        <!--end of Footer-->
 </main>
 </body>
 </html>
