finished links and making final checks

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
             <img src="resources/pics/img-tea-cozy-logo.png" alt="Logo">
         </section>
         <nav>
-            <span><a href="#">Mission</a></span>
-            <span><a href="#">Featured Tea</a></span>
-            <span><a href="#">Locations</a></span>
+            <span><a href="#content">Mission</a></span>
+            <span><a href="#second-section">Featured Tea</a></span>
+            <span><a href="#locations-section">Locations</a></span>
         </nav>
     </header>
     <!--end of Header-->
     <!--Main content-->
 <main>
-    <div class="content">
+    <div id="content">
         <div class="top-section-content">
             <!--top section for Our Mission-->
             <section class="top-section">
@@ -30,10 +30,10 @@
                     </div>   
             </section>
         </div>
+    </div>   
         <!--End of top section-->
         <!--Second section Tea of the Month-->
-        </div>
-        <section class="second-section">
+        <section id="second-section">
             <div class="Tea-of-the-month">
                 <div class="tea-content">
                     <h2>Tea of the Month</h2>
@@ -71,7 +71,7 @@
         </section>
         <!--end of section 4-->
         <!--Start of Section 5 (locations)-->
-        <section class="locations-section">
+        <section id="locations-section">
             <div class="locations-content">
                 <div class="locations-title">
                     <h3>Locations</h3>
@@ -113,5 +113,6 @@
         </div>
         <!--end of Footer-->
 </main>
+        <!--End of Main content Div-->
 </body>
 </html>
